@@ -14,6 +14,7 @@ plugins {
 	id "jacoco"
 	id "com.diffplug.spotless" version "6.19.0"
 	id "net.ltgt.errorprone" version "3.1.0"
+	id 'org.graalvm.buildtools.native' version '0.9.22'
 //    id 'org.unbroken-dome.test-sets' version '4.0.0'
 //    id 'maven-publish'
 //    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
@@ -27,6 +28,7 @@ repositories {
 	// Use Maven Central for resolving dependencies.
 	mavenCentral()
 }
+
 
 tasks.withType(JavaCompile).configureEach {
 	options.annotationProcessorPath = configurations.annotationProcessor
@@ -60,8 +62,14 @@ dependencies {
 	implementation 'com.google.guava:guava:31.1-jre'
 	implementation 'com.github.rholder:guava-retrying:2.0.0'
 
+	// define any required OkHttp artifacts without version
+	implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.2")
+	implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2")
+
 	implementation('org.web3j:core:4.9.8') {
 		exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
+		exclude group: 'com.squareup.okhttp3', module: 'okhttp'
+		exclude group: 'com.squareup.okhttp3', module: 'logging-interceptor'
 	}
 	implementation('net.osslabz.evm:evm-abi-decoder:0.0.6')
 	implementation 'com.github.gestalt-config:gestalt-core:0.20.4'
@@ -69,6 +77,7 @@ dependencies {
 
 	implementation 'com.fasterxml.jackson:jackson-bom:2.15.2'
 	implementation 'com.fasterxml.jackson.core:jackson-core'
+//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-toml'
 	implementation 'org.jctools:jctools-core:4.0.1'
 
@@ -109,13 +118,13 @@ dependencies {
 	errorprone("com.google.errorprone:error_prone_core:2.18.0")
 
 	testImplementation 'org.mockito:mockito-junit-jupiter:2.19.0'
-	testImplementation("com.squareup.okhttp3:mockwebserver:4.11.0")
+	testImplementation("com.squareup.okhttp3:mockwebserver:5.0.0-alpha.2")
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(19)
+		languageVersion = JavaLanguageVersion.of(20)
 	}
 }
 
@@ -258,7 +267,7 @@ javadoc {
 		options.addBooleanOption('html5', true)
 	}
 	options.addBooleanOption('-enable-preview', true)
-	options.addStringOption('-release', '19')
+	options.addStringOption('-release', '20')
 	options.addStringOption('-add-modules', 'jdk.incubator.concurrent')
 }
 
@@ -274,6 +283,7 @@ jar {
 		exclude 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.SF'
 	}
 }
+
 
 task buildBinary {
 	dependsOn jar
@@ -311,4 +321,38 @@ task buildJarForDocker {
 		}
 	}
 	println(out.toString())
+}
+
+graalvmNative {
+	metadataRepository {
+		enabled = true
+	}
+
+	binaries {
+		main {
+			imageName = 'hildr-node'
+
+//			javaLauncher = javaToolchains.launcherFor {
+//				languageVersion = JavaLanguageVersion.of(20)
+//				vendor = JvmVendorSpec.matching("GraalVM")
+//			}
+
+//			buildArgs.add('-J--enable-preview')
+//			buildArgs.add('-J--add-modules=jdk.incubator.concurrent')
+			buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback.core.CoreConstants,ch.qos.logback.core.util.Loader,ch.qos.logback.core.util.StatusPrinter,ch.qos.logback.core.status.InfoStatus,ch.qos.logback.classic.Logger,ch.qos.logback.core.rolling.helper.FileNamePattern,ch.qos.logback.classic.Level,ch.qos.logback.core.status.StatusBase,io.opentelemetry.api.trace.ArrayBasedTraceStateBuilder,io.opentelemetry.context.LazyStorage,ch.qos.logback.core.util.FileSize,ch.qos.logback.core.rolling.helper.RollingCalendar,io.opentelemetry.api.internal.ImmutableSpanContext,io.opentelemetry.api.internal.OtelEncodingUtils,ch.qos.logback.classic.PatternLayout,io.opentelemetry.context.ThreadLocalContextStorage,io.opentelemetry.api.trace.PropagatedSpan,io.opentelemetry.context.ContextStorageWrappers,ch.qos.logback.core.rolling.helper.Compressor$1,io.opentelemetry.api.trace.ImmutableTraceFlags,ch.qos.logback.core.rolling.helper.RollingCalendar$1,ch.qos.logback.classic.model.ConfigurationModel,ch.qos.logback.core.model.processor.DefaultProcessor$1,ch.qos.logback.core.model.processor.ImplicitModelHandler$1,ch.qos.logback.core.subst.Token,ch.qos.logback.core.pattern.parser.Parser,ch.qos.logback.core.subst.Parser$1,ch.qos.logback.core.util.Duration,ch.qos.logback.core.model.processor.ChainedModelFilter$1,ch.qos.logback.classic.model.processor.ConfigurationModelHandler,ch.qos.logback.classic.model.processor.LogbackClassicDefaultNestedComponentRules,ch.qos.logback.core.subst.NodeToStringTransformer$1,ch.qos.logback.core.pattern.parser.TokenStream$1,ch.qos.logback.core.subst.Tokenizer$1')
+			buildArgs.add('--initialize-at-run-time=io.netty.channel.AbstractChannel,io.netty.channel.socket.nio.SelectorProviderUtil,io.netty.util.concurrent.DefaultPromise,io.netty,org.slf4j.MDC,org.github.gestalt.config')
+			buildArgs.add('--enable-http')
+			buildArgs.add('--enable-https')
+			buildArgs.add('--enable-preview')
+			buildArgs.add('--add-modules=jdk.incubator.concurrent')
+//			buildArgs.add('--report-unsupported-elements-at-runtime')
+//			buildArgs.add('--features=okhttp3.internal.graal.OkHttpFeature')
+//			buildArgs.add('-H:EnableURLProtocols=http,https')
+
+//			buildArgs.add('-H:+AddAllCharsets')
+//			buildArgs.add('-H:+StaticExecutableWithDynamicLibC')
+
+//			useFatJar = true
+		}
+	}
 }
